--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
+        <div class="container-fluid p-0">
             <a class="navbar-brand" href="#">
                 <img id="logo" src="assets/img/logo-white.png" alt="CUPPON">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav container-fluid justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Inicio</a>
                     </li>
@@ -48,9 +48,9 @@
     <div class="container-fluid" id="cuerpo">
         <!-- 1era fila -->
         <div class="row" id="card_deck_1">
-            <div class="col">
+            <div class="col-lg">
                 <!-- Producto 1 -->
-                <div class="card m-0">
+                <div class="card m-lg-0">
                     <img src="assets/img/cupon-1.jpg" class="img-fluid card-img-top" alt="...">
                     <div class="card-body text-start">
                         <p id="title"> Plumón Coral Fleece estampado en modelo y tamaño a elección </p>
@@ -64,9 +64,9 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg">
                 <!-- Producto 2 -->
-                <div class="card m-0">
+                <div class="card m-lg-0">
                     <img src="assets/img/cupon-2.jpg" class="img-fluid card-img-top" alt="...">
                     <div class="card-body text-start">
                         <p id="title"> Entrada para compartir + platos de fondo + postres + bebestibles </p>
@@ -80,9 +80,9 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg">
                 <!-- Producto 3 -->
-                <div class="card m-0">
+                <div class="card m-lg-0">
                     <img src="assets/img/cupon-3.jpg" class="img-fluid card-img-top" alt="...">
                     <div class="card-body text-start">
                         <p id="title"> Evaluación integral + blanqueamiento dental led + limpieza + fluoración </p>
@@ -99,9 +99,9 @@
 
         <!-- 2da fila -->
         <div class="row">
-            <div class="col">
+            <div class="col-lg">
                 <!-- Producto 4 -->
-                <div class="card m-0">
+                <div class="card m-lg-0">
                     <img src="assets/img/cupon-4.jpg" class="img-fluid card-img-top" alt="...">
                     <div class="card-body text-start">
                         <p id="title"> Colación para 2 personas + postre (no incluye bebidas) </p>
@@ -115,9 +115,9 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg">
                 <!-- Producto 5 -->
-                <div class="card m-0">
+                <div class="card m-lg-0">
                     <img src="assets/img/cupon-5.jpg" class="img-fluid card-img-top" alt="...">
                     <div class="card-body text-start">
                         <p id="title"> 1, 2 o 4 tickets para Stukids. Elige sucursal </p>
@@ -131,9 +131,9 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg">
                 <!-- Producto 6 -->
-                <div class="card m-0">
+                <div class="card m-lg-0">
                     <img src="assets/img/cupon-6.jpg" class="img-fluid card-img-top" alt="...">
                     <div class="card-body text-start">
                         <p id="title"> San Pedro de Atacama : 1 o 2 noches en alojamiento a elección </p>
@@ -151,7 +151,7 @@
     </div>
 
     <!-- Sección cupones -->
-    <div class="container-fluid d-flex justify-content-center" id="coupon">
+    <div class="container-fluid ps-0 pe-0 d-flex justify-content-center" id="coupon">
         <div class="row p-0">
             <div class="col text-start p-0">
                 <p class="title_coupon">Recibe cupones en tu correo</p>
@@ -164,7 +164,7 @@
         </div>
     </div>
 
-    <!-- FOOTER -->
+    <!-- Footer -->
     <footer class="text-center d-flex align-items-center">
         <div class="container">
             <img id="logo_black" src="assets/img/logo-black.png" alt="CUPPON">
